Add Udacity Feedbacks
1- Using Parecable.
2- Implement Click Lisiener on Adapter in Activity | Fragment .

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -17,7 +17,7 @@
         app:itemIconTint="@drawable/ic_nav"
         app:itemTextColor="@drawable/ic_nav"
         android:layout_marginStart="0dp"
-        android:background="?android:attr/windowBackground"
+        android:background="@color/colorPrimaryDark"
         android:layout_alignParentBottom="true"
         app:menu="@menu/navigation" />
 
