--- a/app/src/main/res/layout/content_movie_detail.xml
+++ b/app/src/main/res/layout/content_movie_detail.xml
@@ -107,6 +107,37 @@
                 android:text="Batman ...."
                 android:textColor="@color/colorDarkGray"
                 />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/text_trailers"
+                android:textColor="@color/color_Blue_03"
+                android:layout_marginTop="12dp"
+                />
+            <View
+                android:id="@+id/div3"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="4dp"
+                android:background="@color/colorAccent"/>
+
+            <android.support.v7.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/rv_trailers"
+                android:layout_marginTop="12dp"
+                android:paddingBottom="32dp"
+                >
+            </android.support.v7.widget.RecyclerView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/tv_trailer_connection"
+                android:visibility="gone"
+                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+                android:text="@string/no_internet_message"
+                />
         </LinearLayout>
     </RelativeLayout>
 
