--- a/app/src/main/res/layout/fragment_top_rated.xml
+++ b/app/src/main/res/layout/fragment_top_rated.xml
@@ -15,6 +15,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/rv_image_poster"
+            android:nestedScrollingEnabled="true"
             >
         </android.support.v7.widget.RecyclerView>
 
