--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".features.MovieDetail">
+    tools:context=".features.activities.MovieDetail">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar"
