--- a/app/src/main/res/layout/fragment_most_popular.xml
+++ b/app/src/main/res/layout/fragment_most_popular.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.nanodegree.movietime.features.MostPopularFragment">
+    tools:context="com.nanodegree.movietime.features.fragments.MostPopularFragment">
 
     <RelativeLayout
         android:layout_width="match_parent"
